--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from www.protton.co.in/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 14:16:06 GMT -->
 <head>
     <meta charset="utf-8">
-    <title>Protton Synergy :: Home</title>
+    <title>mayarmds :: Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -157,7 +157,7 @@
                                 <div class="text-item">
                                     <!-- <p class="banner_txt1">Protton <span><span id="typed2"></span><span class="cursor"></span>
                                     </span></p> -->
-                                    <p class="banner_txt1">Protton Synergy</p>
+                                    <p class="banner_txt1">mayarmds</p>
                                     <p class="banner_txt2">A Trusted associate in Off-shore & On-shore Engineering</p>
                                     <a href="about-us.html" class="btn btn-border btn-big">Know More</a>
                                 </div>
@@ -620,7 +620,7 @@
                                           <div>
                                             <div class="de_testi">
                                                 <blockquote>
-                                                    <p>Protton Synergy is our trusted associate who works with us and helps us to achieve our targets especially in stress analysis. Also, the man power deputed by Protton Synergy always found to be technically sound and productive. We also seek their services in critical analysis like FEA, CFD etc. We recommend them for their technical ability and passion in work.</p>
+                                                    <p>mayarmds is our trusted associate who works with us and helps us to achieve our targets especially in stress analysis. Also, the man power deputed by mayarmds always found to be technically sound and productive. We also seek their services in critical analysis like FEA, CFD etc. We recommend them for their technical ability and passion in work.</p>
                                                 </blockquote>
                                                 <div class="de_testi_by">
                                                     <div class="de_testi_pic">
@@ -635,7 +635,7 @@
                                            <div>
                                             <div class="de_testi">
                                                 <blockquote>
-                                                    <p>EPP Composites Pvt. Ltd. Is associated with Protton Synergy since 2017 and most of our FRP pipe stress analysis and Surge analysis is carried out by them. We appreciate their support till end and their technical ability to answer client's comments. All the projects have been completed with satisfactory level and many more to come. we wish them our best wishes and endorse them as a technically sound engineering company.</p>
+                                                    <p>EPP Composites Pvt. Ltd. Is associated with mayarmds since 2017 and most of our FRP pipe stress analysis and Surge analysis is carried out by them. We appreciate their support till end and their technical ability to answer client's comments. All the projects have been completed with satisfactory level and many more to come. we wish them our best wishes and endorse them as a technically sound engineering company.</p>
                                                 </blockquote>
                                                 <div class="de_testi_by">
                                                     <div class="de_testi_pic">
@@ -650,7 +650,7 @@
                                           <div>
                                            <div class="de_testi">
                                                <blockquote>
-                                                   <p>Protton synergy Engineers are well experienced and experts in Piping Stress Analysis and Surge Analysis related to Paste Slurry Applications, in which we worked with them.</p>
+                                                   <p>mayarmds Engineers are well experienced and experts in Piping Stress Analysis and Surge Analysis related to Paste Slurry Applications, in which we worked with them.</p>
                                                </blockquote>
                                                <div class="de_testi_by">
                                                    <div class="de_testi_pic">
@@ -667,7 +667,7 @@
                                          <div>
                                           <div class="de_testi">
                                               <blockquote>
-                                                  <p>Protton Synergy are excellent in their professionalism. They have provided with the projects well within the timeline even when things were a little bit tight. The coordination and cooperation are excellent from their side. </p>
+                                                  <p>mayarmds are excellent in their professionalism. They have provided with the projects well within the timeline even when things were a little bit tight. The coordination and cooperation are excellent from their side. </p>
                                               </blockquote>
                                               <div class="de_testi_by">
                                                   <div class="de_testi_pic">
@@ -710,7 +710,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h5>About Protton Synergy Pvt. Ltd.</h5>
+                            <h5>About mayarmds Pvt. Ltd.</h5>
                             <hr class="hr_02">
                         </div>
                     </div>
@@ -719,8 +719,8 @@
                             <p>
                                 <b>We 'value' our clients by providing Ethical, Economical, Effective and Efficient engineering solutions. We believe in continuous improvement and aspire to build long term relation with them.</b><br/><br/>
 
-                                PROTTON SYNERGY PVT.LTD. is a specialized engineering consultancy providing  engineering and design solutions in the field of Process & Petrochemical Industry. We value our clients by providing Ethical, Economical, Effective and Efficient engineering solutions.  Our focused, pragmatic and resourceful team ensures that we enable our clients to achieve their targets and aspirations.<br/><Br/>
-                                PROTTON SYNERGY PVT.LTD. is a fast growing and rising company in the dynamic field of Piping Technology. We specialize in Design and Engineering (Static and Dynamic Stress analysis) of Piping and Pipeline Projects. We provide Water Hammer / Surge analysis solutions along with Dynamic pipe stress analysis under one roof. We also have expertise in Finite Element Analysis (FEA), Computational Fluid Dynamics (CFD) solving specifically Process Plant problems.
+                                mayarmds PVT.LTD. is a specialized engineering consultancy providing  engineering and design solutions in the field of Process & Petrochemical Industry. We value our clients by providing Ethical, Economical, Effective and Efficient engineering solutions.  Our focused, pragmatic and resourceful team ensures that we enable our clients to achieve their targets and aspirations.<br/><Br/>
+                                mayarmds PVT.LTD. is a fast growing and rising company in the dynamic field of Piping Technology. We specialize in Design and Engineering (Static and Dynamic Stress analysis) of Piping and Pipeline Projects. We provide Water Hammer / Surge analysis solutions along with Dynamic pipe stress analysis under one roof. We also have expertise in Finite Element Analysis (FEA), Computational Fluid Dynamics (CFD) solving specifically Process Plant problems.
                             </p>
                             <a href="about-us.html"><button type="button" class="btn btn-default read_btn">Read More</button></a>
                         </div>
@@ -872,8 +872,8 @@
                     <div class="row">
                         <div class="col-md-4 col-xs-12 col-sm-4">
                             <div class="footer_section1">
-                                <p>Protton Synergy</p>
-                                <p>PROTTON SYNERGY is a fast growing and rising company in the dynamic field of Piping Technology. 
+                                <p>mayarmds</p>
+                                <p>mayarmds is a fast growing and rising company in the dynamic field of Piping Technology. 
                                 Feel absolutely free to get in touch, We are here always to hear from you.</p>
                             </div>
                             <div class="add_section">
@@ -881,7 +881,7 @@
                                     <i class="fas fa-home"></i>
                                 </div>
                                 <div class="add_section2">
-                                    <p>Protton Synergy Pvt. Ltd
+                                    <p>mayarmds Pvt. Ltd
 MEC Group company 
 
 C/o Muscat Engineering Consultancy 
@@ -976,7 +976,7 @@ Mumbai, Maharashtra 400059.</p>
                     <div class="bottom_footer">
                         <div class="row">
                             <div class="col-md-12">
-                                <p>© Copyright 2019 Protton Synergy | All Rights Reserved. Powered by <a href="http://websoftz.com/" target="_blank">WEBSOFTZ</a></p>
+                                <p>© Copyright 2019 mayarmds | All Rights Reserved. Powered by <a href="http://websoftz.com/" target="_blank">WEBSOFTZ</a></p>
                             </div>
                         </div>
                     </div>
