--- a/FEA&CFD.html
+++ b/FEA&CFD.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from www.protton.co.in/FEA&CFD.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 14:17:21 GMT -->
 <head>
     <meta charset="utf-8">
-    <title>Protton Synergy :: Piping Engineering & Design</title>
+    <title>mayarmds :: Piping Engineering & Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -554,8 +554,8 @@
                     <div class="row">
                         <div class="col-md-4 col-xs-12 col-sm-4">
                             <div class="footer_section1">
-                                <p>Protton Synergy</p>
-                                <p>PROTTON SYNERGY is a fast growing and rising company in the dynamic field of Piping Technology. 
+                                <p>mayarmds</p>
+                                <p>mayarmds is a fast growing and rising company in the dynamic field of Piping Technology. 
                                 Feel absolutely free to get in touch, We are here always to hear from you.</p>
                             </div>
                             <div class="add_section">
@@ -563,7 +563,7 @@
                                     <i class="fas fa-home"></i>
                                 </div>
                                 <div class="add_section2">
-                                    <p>Protton Synergy Pvt. Ltd
+                                    <p>mayarmds Pvt. Ltd
 MEC Group company 
 
 C/o Muscat Engineering Consultancy 
@@ -659,7 +659,7 @@ Mumbai, Maharashtra 400059.</p>
                     <div class="bottom_footer">
                         <div class="row">
                             <div class="col-md-12">
-                                <p>© Copyright 2019 Protton Synergy | All Rights Reserved. Powered by <a href="http://websoftz.com/" target="_blank">WEBSOFTZ</a></p>
+                                <p>© Copyright 2019 mayarmds | All Rights Reserved. Powered by <a href="http://websoftz.com/" target="_blank">WEBSOFTZ</a></p>
                             </div>
                         </div>
                     </div>
