--- a/careers.html
+++ b/careers.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from www.protton.co.in/careers.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 14:17:34 GMT -->
 <head>
     <meta charset="utf-8">
-    <title>Protton Synergy :: Career</title>
+    <title>mayarmds :: Career</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -179,12 +179,12 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="contact_sec1">
-                                        <h1 class="mar_top">Career at Protton Synergy</h1>
+                                        <h1 class="mar_top">Career at mayarmds</h1>
                                         <hr class="hr_04">
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <p>
-                                                    At PROTTON SYNERGY , we provide two types of employments.<br /><br />
+                                                    At mayarmds , we provide two types of employments.<br /><br />
                                                     One for our in –house need where  we bring out the best in our people by providing them with fantastic opportunities promoting their learning, motivation and passion to excel. We look forward to dedicated engineers who aspire to be the clock builders and not just time tellers. Here we encourage engineers who look career not only as a monetary gain but also considers learnings, self-branding, research, recognition and health as important aspects of career.<br /><br />
                                                     In other type, we depute candidates on third party contract to renowned multi national companies on 6 months to one year contract in multiple disciplines such as – PIPING, PIPELINES, PDMS, PDS,SP3D, Engineers and designers, Electrical, instrumentation, civil, process engineers and designers.
                                                 </p>
@@ -292,9 +292,9 @@
                     <div class="row">
                         <div class="col-md-4 col-xs-12 col-sm-4">
                             <div class="footer_section1">
-                                <p>Protton Synergy</p>
+                                <p>mayarmds</p>
                                 <p>
-                                    PROTTON SYNERGY is a fast growing and rising company in the dynamic field of Piping Technology.
+                                    mayarmds is a fast growing and rising company in the dynamic field of Piping Technology.
                                     Feel absolutely free to get in touch, We are here always to hear from you.
                                 </p>
                             </div>
@@ -303,7 +303,7 @@
                                     <i class="fas fa-home"></i>
                                 </div>
                                 <div class="add_section2">
-                                    <p>Protton Synergy Pvt. Ltd
+                                    <p>mayarmds Pvt. Ltd
 MEC Group company 
 
 C/o Muscat Engineering Consultancy 
@@ -399,7 +399,7 @@ Mumbai, Maharashtra 400059.</p>
                     <div class="bottom_footer">
                         <div class="row">
                             <div class="col-md-12">
-                                <p>© Copyright 2019 Protton Synergy | All Rights Reserved. Powered by <a href="http://websoftz.com/" target="_blank">WEBSOFTZ</a></p>
+                                <p>© Copyright 2019 mayarmds | All Rights Reserved. Powered by <a href="http://websoftz.com/" target="_blank">WEBSOFTZ</a></p>
                             </div>
                         </div>
                     </div>
