--- a/careers.html
+++ b/careers.html
@@ -57,8 +57,8 @@
                             <div class="left_div">
                                 <div class="top_left_sec">
                                     <ul>
-                                        <li><a href="tel: 91 9820769617"><i class="fa fa-phone c_icon"></i> +91 9820769617</a></li>
-                                        <li><a href="mailto: training@protton.co.in"><i class="fa fa-envelope c_icon2"></i>training@protton.co.in</a></li>
+                                        <li><a href="tel: 91 8323447312"><i class="fa fa-phone c_icon"></i> +91 8323447312</a></li>
+                                        <li><a href="mailto: info@mayarmds.com"><i class="fa fa-envelope c_icon2"></i>info@mayarmds.com</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -320,7 +320,7 @@ Mumbai, Maharashtra 400059.</p>
                                     <i class="fas fa-phone-alt"></i>
                                 </div>
                                 <div class="add_section2">
-                                    <p><a href="tel:91 9820769617">+91 9820769617</a></p>
+                                    <p><a href="tel:91 8323447312">+91 8323447312</a></p>
                                 </div>
                             </div>
                             <div class="add_section">
@@ -328,10 +328,10 @@ Mumbai, Maharashtra 400059.</p>
                                     <i class="fas fa-envelope"></i>
                                 </div>
                                 <div class="add_section2">
-                                    <p><a href="mailto:info@protton.co.in">info@protton.co.in</a></p>
+                                    <p><a href="mailto:info@mayarmds.com">info@mayarmds.com</a></p>
                                 </div>
                             </div>
-                            <div class="follow_us">FOLLOW US: <a href="https://www.linkedin.com/company/protton-synergy" target="_blank"><span><i class="fab fa-linkedin-in"></i></span></a></div>
+                            <div class="follow_us">FOLLOW US: <a href="" target="_blank"><span><i class="fab fa-linkedin-in"></i></span></a></div>
                         </div>
 
                         <div class="col-md-4 col-sm-4 col-xs-12">
