--- a/achievement.html
+++ b/achievement.html
@@ -135,7 +135,7 @@
   
                  
                   <li><a href="https://protton.co.in/training/blog/">Blogs</a></li>
-                  <li><a href="careers.html">Career</a></li>
+                  <li><a href="projects.html">Career</a></li>
                   <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
               </div>
@@ -414,7 +414,7 @@ Mumbai, Maharashtra 400059.</p>
                         <li><a href="achievement.html">Achievement</a></li>
                         <li><a href="publications.html">Publications</a></li>
                                             <li><a href="https://protton.co.in/training/blog/">Blogs</a></li>
-                                            <li><a href="careers.html">Career</a></li>
+                                            <li><a href="projects.html">Career</a></li>
                                             <li><a href="contact-us.html">Contact Us</a></li>
                                             <li><a href="privacy-policy.html">Privacy Policy</a></li>
                                           
