--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.protton.co.in/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 14:16:06 GMT -->
 <head>
     <meta charset="utf-8">
     <title>Mayarmds :: Home</title>
@@ -10,9 +9,6 @@
     <meta name="keywords" content="">
     <meta name="author" content="">
 
-    <!--[if lt IE 9]>
-	<script src="js/html5shiv.js"></script>
-	<![endif]-->
 
 
     <!-- CSS Files
@@ -105,8 +101,8 @@
                         <a class="dropdown-item divider" href="heat-and-mass-transfer-analysis.html">Heat And Mass Transfer Analysis</a>
                       </div>
                   </li>
-                  <li><a href="careers.html">Projects</a></li>
-                  <li><a href="careers.html">Key Personal</a></li>
+                  <li><a href="projects.html">Projects</a></li>
+                  <li><a href="projects.html">Key Personal</a></li>
                   <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
               </div>
@@ -586,20 +582,6 @@
                 </div>
             </footer>
             
-            <div class="modal fade" id="welcomepop" tabindex="-1" role="dialog" aria-labelledby="welcomepopTitle" aria-hidden="true">
-                <div class="modal-dialog modal-lg" role="document">
-                  <div class="modal-content" style="background: none;border: none;box-shadow: none;">
-                    <div class="modal-header" style="border: none;">
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                     <img src="Event/Pipetech-2022/Pipetech-invitition.jpg" class="img-responsive">
-                    </div>
-                  </div>
-                </div>
-            </div>
             
         </div>
 
@@ -691,5 +673,4 @@
 </script>    
 </body>
 
-<!-- Mirrored from www.protton.co.in/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 14:16:33 GMT -->
 </html>
