--- a/piping-engineering-and-design.html
+++ b/piping-engineering-and-design.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from www.protton.co.in/piping-engineering-and-design.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 14:17:09 GMT -->
 <head>
     <meta charset="utf-8">
     <title>Mayarmds :: Piping Engineering & Design</title>
@@ -9,11 +7,6 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
-
-    <!--[if lt IE 9]>
-	<script src="js/html5shiv.js"></script>
-	<![endif]-->
-
 
     <!-- CSS Files
     ================================================== -->
@@ -136,7 +129,7 @@
   
                  
                   <li><a href="https://protton.co.in/training/blog/">Blogs</a></li>
-                  <li><a href="careers.html">Career</a></li>
+                  <li><a href="projects.html">Career</a></li>
                   <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
               </div>
@@ -417,7 +410,7 @@ Mumbai, Maharashtra 400059.</p>
                                               <li><a href="achievement.html">Achievement</a></li>
                                             <li><a href="publications.html">Publications</a></li>
                                             <li><a href="https://protton.co.in/training/blog/">Blogs</a></li>
-                                            <li><a href="careers.html">Career</a></li>
+                                            <li><a href="projects.html">Career</a></li>
                                             <li><a href="contact-us.html">Contact Us</a></li>
                                             <li><a href="privacy-policy.html">Privacy Policy</a></li>
                                           
