--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <title>Mayarmds :: CFD Analysis</title>
+    <title>Mayarmds :: Projects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -116,7 +116,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1>CFD Analysis</h1>
+                            <h1>Projects</h1>
                         </div>
                     </div>  
                 </div>  
@@ -129,14 +129,39 @@
                             <nav aria-label="breadcrumb">
                               <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">CFD Analysis</li>
+                                <li class="breadcrumb-item active" aria-current="page">Projects</li>
                               </ol>
                             </nav>
                         </div>
                     </div>
                 </div>
             </section>
- 
+
+            <section class="about_section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>About Mayarmds</h1>
+                            <hr class="hr_02">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-7 col-md-7">
+                            <p>
+                               <b>MAYAR MDS is a specialized engineering consultancy that offers engineering and design solutions exclusively in the realm of the process and petrochemical industries.</b> 
+                            </p>
+                            <p>We possess the knowledge, skills, and expertise required to address the challenges of oil and gas pipelines, chemical plants, refineries, Wastewater Treatment (WWT), and pipeline industries.</p>
+                            <p>We focus on addressing process plant challenges in Designing, Detailing, Feasibility Studies, and Structural analyses for piping and pipeline projects. Our areas of specialization encompass Petrochemical, Waste Water Treatment Plants, Pilot Plants, Customized Package Skids, Special Purpose Machines, and Residential, Commercial, and Industrial Properties.</p>
+                            <p>Our team consists of experienced professionals in the fields of FEA, CFD, Pipeline surge, dynamic pipe stress analysis, Cost Estimations, and Exchanger Thermal Design all under one roof. Furthermore, we have access to a pool of expert engineers with Ph. D.s who can provide advanced expertise on critical subjects. We ensure optimal resource utilization at every stage of our process, offering clients the best value for their investment.</p>
+                            <p>We prioritize our clients by providing ethical, economically sound, effective, and efficient engineering solutions. Our focused, practical, and resourceful team ensures that we empower our clients to achieve their objectives and ambitions.</p>
+                        </div>
+                        
+                        <div class="col-sm-5 desk_img col-md-5">
+                            <img src="images/services/about-us-img.jpg" class="img-responsive">
+                        </div>
+                    </div>
+                </div>
+            </section>
             
             <footer class="footer_section">
                 <div class="container">
